[UPD] #59632 Self Service restriction

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -33,7 +33,7 @@
     </accessManagment>
   </formLibConfigurable>
 
-  <!--<selfServiceConfigurable>
+  <selfServiceConfigurable>
     <selfServiceUrlSetting>
       <deniedUrls>
         <url key="0" path="/case/Index*" />
@@ -57,7 +57,7 @@
         <url key="4" path="/Case/ExtendedCase" />
       </allowedUrls>            
     </selfServiceUrlSetting>    
-  </selfServiceConfigurable>-->
+  </selfServiceConfigurable>
   
   
   <connectionStrings>
@@ -98,7 +98,7 @@
     <add key="DefaultUserId" value="" />
     <add key="DefaultEmployeeNumber" value="13106668" />
     
-    <add key="ConfirmMsgAfterCaseRegistration" value="false" />
+    <add key="ConfirmMsgAfterCaseRegistration" value="true" />
     <add key="CaseList" value="coworkers" />
     <add key="CurrentApplication" value="LineManager" />
     <!-- "SelfService", "LineManager" -->
