--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Enums\Case\CaseSearchGroup.cs" />
     <Compile Include="Enums\Case\Fields\CaseInfoFields.cs" />
     <Compile Include="Enums\Case\Fields\ComputerFields.cs" />
+    <Compile Include="Enums\Case\Fields\FieldSettingsUINames.cs" />
     <Compile Include="Enums\Case\Fields\LogFields.cs" />
     <Compile Include="Enums\Case\Fields\OtherFields.cs" />
     <Compile Include="Enums\Case\Fields\UserFields.cs" />
