[ADD] #59845 Inventory search in all types

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -3283,6 +3283,20 @@
     <Content Include="Content\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\fonts\fontawesome-webfont.ttf" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\Fields\Date.cshtml" />
+    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\Fields\Flag.cshtml" />
+    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\Fields\List.cshtml" />
+    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\Fields\Number.cshtml" />
+    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\Fields\Text.cshtml" />
+    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\Fields\WideText.cshtml" />
+    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Date.cshtml" />
+    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Flag.cshtml" />
+    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\List.cshtml" />
+    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Number.cshtml" />
+    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Text.cshtml" />
+    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\WideText.cshtml" />
+    <Content Include="Areas\Inventory\Views\Shared\_EditPopupLayout.cshtml" />
+    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\Fields\ListInt.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="ReportViewerWebForm.aspx" />
     <Content Include="Content\js\Shared\custom.validation.reuiredifnotempty.js" />
@@ -3367,12 +3381,6 @@
     <Content Include="Areas\Inventory\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Inventory\Views\Workstation\Edit.cshtml" />
     <Content Include="Areas\Inventory\Views\Workstation\_EditWorkstationLayout.cshtml" />
-    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Date.cshtml" />
-    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Flag.cshtml" />
-    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\List.cshtml" />
-    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Number.cshtml" />
-    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\Text.cshtml" />
-    <Content Include="Areas\Inventory\Views\Workstation\EditorTemplates\Fields\WideText.cshtml" />
     <Content Include="Areas\Inventory\Views\Workstation\Storage.cshtml" />
     <Content Include="Areas\Inventory\Views\Workstation\Software.cshtml" />
     <Content Include="Areas\Inventory\Views\Workstation\HotFixes.cshtml" />
@@ -3394,12 +3402,6 @@
     <Content Include="Areas\Inventory\Views\Server\EditorTemplates\StateModel.cshtml" />
     <Content Include="Areas\Inventory\Views\Server\EditorTemplates\StorageFieldsModel.cshtml" />
     <Content Include="Areas\Inventory\Views\Server\EditorTemplates\OtherFieldsModel.cshtml" />
-    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\NotReadonlyFields\Date.cshtml" />
-    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\NotReadonlyFields\Flag.cshtml" />
-    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\NotReadonlyFields\List.cshtml" />
-    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\NotReadonlyFields\Number.cshtml" />
-    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\NotReadonlyFields\Text.cshtml" />
-    <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\NotReadonlyFields\WideText.cshtml" />
     <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\ChassisFieldsModel.cshtml" />
     <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\InventoryFieldsModel.cshtml" />
     <Content Include="Areas\Inventory\Views\Shared\EditorTemplates\MemoryFieldsViewModel.cshtml" />
