--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="EPPlus" version="3.1.3.3" targetFramework="net40" />
   <package id="LinqExtLibrary" version="1.0.4.2" targetFramework="net40" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net40" requireReinstallation="true"/>
+  <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net40" requireReinstallation="true" />
   <package id="PostSharp" version="4.0.36" targetFramework="net40" />
   <package id="System.Linq.Dynamic" version="1.0.3" targetFramework="net40" />
 </packages>
