--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -317,7 +317,6 @@
     <Compile Include="Infrastructure\Extensions\NewtonsoftJsonExtensions.cs" />
     <Compile Include="Infrastructure\Helpers\AsyncHelper.cs" />
     <Compile Include="Infrastructure\Helpers\CommonHelper.cs" />
-    <Compile Include="Infrastructure\Helpers\TranslateHelper.cs" />
     <Compile Include="Infrastructure\WebApi\WebApiService.cs" />
     <Compile Include="Models\Case\InvoiceTimeModel.cs" />
     <Compile Include="Models\JsonModels\Base\BaseJsonModel.cs" />
@@ -695,7 +694,6 @@
     <Content Include="Content\js\Cases\case.templates.js" />
     <Content Include="Content\js\Cases\caseByIds.logic.js" />
     <Content Include="Content\js\Cases\Dialogs\CaseCharge.js" />
-    <Content Include="Content\js\Cases\Dialogs\_caseAddFollowersSearch.js" />
     <Content Include="Content\js\Cases\Dialogs\_caseAttachExistFile.js" />
     <Content Include="Content\js\Cases\Dialogs\_caseConnectToParent.js" />
     <Content Include="Content\js\Cases\Dialogs\_caseIntLogSearch.js" />
@@ -1060,7 +1058,6 @@
     <Content Include="Content\js\Feedback\feedback.edit.js" />
     <Content Include="Content\js\Feedback\feedbackStatisticsCases.js" />
     <Content Include="Content\js\Inventory\inventory.search.js" />
-    <Content Include="Content\js\Questionnaire\editCircular.js" />
     <Content Include="Content\js\Shared\commonUtils.js" />
     <Content Include="Content\js\Shared\errors.js" />
     <Content Include="Content\js\Shared\jquery.customAjax.js" />
@@ -3936,7 +3933,6 @@
     <Content Include="Views\Contracts\_ContractFiles.cshtml" />
     <Content Include="Views\Feedback\EditFeedback.cshtml" />
     <Content Include="Views\Feedback\_FeedbackQuestionOptions.cshtml" />
-    <Content Include="Views\Cases\ModalDialogs\_CaseAddFollowers.cshtml" />
     <Content Include="Views\Cases\ModalDialogs\_SendIntLogToDiallog.cshtml" />
     <Content Include="Views\Cases\_ParentCases.cshtml" />
     <Content Include="Views\Cases\ModalDialogs\_CaseCharge.cshtml" />
@@ -3956,6 +3952,7 @@
     <Content Include="Views\Shared\CaseQuickOpen.cshtml" />
     <Content Include="Views\QuestionnaireAnswer\QuestionnaireCompleted.cshtml" />
     <Content Include="Views\QuestionnaireAnswer\Quiestionnaire.cshtml" />
+    <Content Include="Views\Cases\ModalDialogs\_ExtraEmails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
