--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -53,7 +53,9 @@
   <package id="RazorPDF" version="1.0.0" targetFramework="net45" />
   <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net45" />
   <package id="Select2.js" version="4.0.3" targetFramework="net45" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="1.0.0" targetFramework="net45" />
   <package id="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry" version="4.5.1" targetFramework="net45" />
+  <package id="Thinktecture.IdentityModel" version="3.6.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
